@@ -95,7 +95,8 @@ production.
   as lastTabIndex().
 * (bug 29332) Warn if user requests mediawiki-announce subscription but does not
   enter an e-mail address.
-* (bug 25375) Add canonical namespaces to JavaScript "wgNamespaceIds" 
+* (bug 25375) Add canonical namespaces to JavaScript "wgNamespaceIds"
+* The class JpegOrTiffHandler was renamed ExifBitmapHandler. 
 
 === API changes in 1.19 ===
 * BREAKING CHANGE: action=watch now requires POST and token.
